@@ -109,7 +109,7 @@ ul.yarr_nav li {
     line-height:    24px;
     padding:    0 8px;
     border:     1px solid #ccc;
-    background: #f8f8f8;
+    background-color: #f8f8f8;
     color:      #666;
     font-size:  0.8em;
     font-weight:    bold;
@@ -120,7 +120,8 @@ ul.yarr_nav li {
 }
 
 .yarr_button_feeds,
-.yarr_button_settings {
+.yarr_button_settings,
+.yarr_button_all_read {
     display:    block;
     width:  24px;
     height: 24px;
@@ -131,6 +132,9 @@ ul.yarr_nav li {
 }
 .yarr_button_feeds {
     background-position: 50% -96px;
+}
+.yarr_button_all_read {
+    background-position: 50% -168px;
 }
 
 .yarr_dropdown_menu li a:hover,
